@@ -20,6 +20,6 @@
  
  
  */
-//- (void)didReceiveTap
+- (void)didReceiveTap:(UIViewController *)sender inRect:(CGRect)rect;
 
 @end
